--- a/templates/contact.html
+++ b/templates/contact.html
@@ -115,7 +115,7 @@
 									<a class="nav-link" href="{% url 'vision' %}">OUR VISION</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="{% url 'teams' %}">TEAMS</a>
+									<a class="nav-link" href="{% url 'teams' %}">TEAM</a>
 								</li>
 								<li class="nav-item active">
 									<a class="nav-link" href="{% url 'contact' %}">CONTACT</a>
@@ -221,7 +221,7 @@
 							<img src="{% static 'img/location-ic-contact-line.png' %}" alt="location-1"
 								class="location-img">
 							<h2>LOCATION:</h2>
-							<p>New york</p>
+							<p>MIAMI NEW YORK</p>
 						</div>
 					</div>
 				</div>
@@ -236,8 +236,8 @@
 							<img src="{% static 'img/location-ic-contact-line.png' %}" alt="location-1"
 								class="location-img">
 							<h2>PHONE:</h2>
-							<p class="detail-sec-number"><a href="tel:(402) 685-5964">(402) 685-5964</a></p>
-							<p class="detail-sec-number1"><a href="tel:(702) 685-8765">(702) 685-8765</a></p>
+							<p class="detail-sec-number"><a href="tel:(000) 000-0000">(000) 000-0000</a></p>
+							<p class="detail-sec-number1"><a href="tel:(000) 000-0000">(000) 000-0000</a></p>
 						</div>
 					</div>
 				</div>
@@ -252,8 +252,9 @@
 							<img src="{% static 'img/location-ic-contact-line.png' %}" alt="location-1"
 								class="location-img">
 							<h2>EMAIL:</h2>
-							<p class="detail-sec-number"><a href="mailto:someone@example.com">info@exemple.com</a></p>
-							<p class="detail-sec-number1"><a href="mailto:someone@example.com">info@exemple.com</a></p>
+							<p class="detail-sec-number"><a href="mailto:INFO@Wndr.com">INFO@Wndr.com</a></p>
+                            <p class="detail-sec-number1"><a href="mailto:PRESS@wndr.com">PRESS@wndr.com</a></p>
+                            <p class="detail-sec-number1"><a href="mailto:DEVS@wndr.com">DEVS@wndr.com</a></p>	
 						</div>
 					</div>
 				</div>
