--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
 			  </span>-->
 			  <div class="sbscribe_btn_input">
 				<span>
-					<input type="email" name="myInput1" required  id="myInput1" value="" placeholder="Email">
+					<input type="email" name="myInput1" required  id="myInput1" value="" placeholder="Enter Email">
 				</span>
 				</div>
 			  <div class="alert alert-danger success-msg" id="sucess_div1" role="alert" hidden>
@@ -62,7 +62,7 @@
 				<div class="banner-WNDR-outer">
 					<div class="banner-WNDR-btn">
 						<span class="WNDR-btn-item WNDR_btn_home animated uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-left; delay: 300; repeat: true">
-						<input type="email" name="myInput2" value="" id="myInput2" placeholder="Email"></span><br>
+						<input type="email" name="myInput2" value="" id="myInput2" placeholder="Enter email"></span><br>
 						<div class="alert alert-danger sueccs-msg" id="sucess_div2" role="alert" hidden>
 							<span id="sucess2" ></span>
 						  </div>
