--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -101,7 +101,7 @@
 					        <a class="nav-link" href="{% url 'vision' %}">OUR VISION</a>
 					      </li>
 						  <li class="nav-item">
-					        <a class="nav-link" href="{% url 'teams' %}">TEAMS</a>
+					        <a class="nav-link" href="{% url 'teams' %}">TEAM</a>
 					      </li>
 					      <li class="nav-item">
 					        <a class="nav-link" href="{% url 'contact' %}">CONTACT</a>
