--- a/templates/base.html
+++ b/templates/base.html
@@ -44,12 +44,13 @@
 			<div class="banner_overlay"></div>
 			<video class="banner_desktop_video" id="video2" width="100%" height="100%"
 				poster="{% static 'image/banner_img.jpg' %}" autoplay muted loop playsinline onclick="return false">
-				<source src="https://wndr.nyc3.digitaloceanspaces.com/PC_V_2.mp4" type="video/mp4">
+				<source src="{% static 'video/PC_version_3mbps.mp4' %}" type="video/mp4">
 			</video>
 			<video class="banner_mobile_video" id="video2" width="100%" height="100%"
 				poster="{% static 'image/banner_img.jpg' %}" autoplay muted loop playsinline onclick="return false">
-				<source src="https://wndr.nyc3.digitaloceanspaces.com/Mobile_V_189_2.mp4" type="video/mp4">
+				<source src="{% static 'video/Mobile_version_3mbps.mp4' %}" type="video/mp4">
 			</video>
+			
 		</div>
 		<!-- header start here -->
 		<header class="header-tag-WNDR">
@@ -88,7 +89,7 @@
 									<a class="nav-link" href="{% url 'vision' %}">OUR VISION</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="{% url 'teams' %}">TEAMS</a>
+									<a class="nav-link" href="{% url 'teams' %}">TEAM</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="{% url 'contact' %}">CONTACT</a>
