--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -97,7 +97,7 @@
 					        <a class="nav-link" href="{% url 'vision' %}">OUR VISION</a>
 					      </li>
 						  <li class="nav-item">
-					        <a class="nav-link" href="{% url 'teams' %}">TEAMS</a>
+					        <a class="nav-link" href="{% url 'teams' %}">TEAM</a>
 					      </li>
 					      <li class="nav-item">
 					        <a class="nav-link" href="{% url 'contact' %}">CONTACT</a>
@@ -132,15 +132,17 @@
 					</a><br>
 				</div>
 			</div>
+
 		</div>
+	</div>
+	<div class="vision-lineas vision_top_lineas">
+		<img src="/static/image/footer-line-top.png" class="top-line" alt="vision-header">
 	</div>
 </div>
 <!---OUR VISION SECTION---->
 <button onclick="topFunction()" id="myBtntopd" title="Go to top"><i class='fa fa-angle-up'></i></button>
 <section class="our-vision-content paper-bg">
-	<div class="vision-line vision_top_line">
-		<img src="/static/image/footer-line-top.png" class="top-line" alt="vision-header">
-	</div>
+	
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 paper-vision wndr_paper">
@@ -241,7 +243,7 @@
 					<p>Tech Demo 2018</p>
 				</div>
 				<div class="vision_video_section" id="video_section_with_image">
-					<video id="myVideo12" class="video1" width="100%" height="100%" controls poster="{% static 'image/slide-15-STREAM.jpg' %}" disablepictureinpicture controlslist="nodownload noplaybackrate"  autoplay muted>
+					<video id="myVideo12" class="video1" width="100%" height="100%" controls poster="{% static 'image/slide-15-STREAM.jpg' %}" autoplay muted disablepictureinpicture controlslist="nodownload noplaybackrate">
 						<source src="{% static 'video/wndr_Tech demo (1080p).mp4' %}" type="video/mp4">
 					</video>
 						<img class="vision_poster_bnr" id="vision_poster_bnr_img" src="{% static 'image/slide-15-STREAM.jpg' %}" alt="vision_poster">
