--- a/templates/contact.html
+++ b/templates/contact.html
@@ -221,7 +221,7 @@
 							<img src="{% static 'img/location-ic-contact-line.png' %}" alt="location-1"
 								class="location-img">
 							<h2>LOCATION:</h2>
-							<p>MIAMI NEW YORK</p>
+							<p>NEW YORK<br> MIAMI </p>
 						</div>
 					</div>
 				</div>
