--- a/static/css/style.css
+++ b/static/css/style.css
@@ -116,16 +116,22 @@
     display: block;
   }
   .mbl-arrow {
-    top: auto;
-    position: unset;
+    position: absolute;
     bottom: 0;
-    left: 38%;
+    /* left: 50%; */
+    /* transform: unset; */
+    /* width: 100%; */
+    /* float: right; */
+    /* height: 40px; */
+    /* overflow: hidden; */
+    z-index: 999;
+    right: 22px;
     transform: unset;
     }
     .arrow-wrap {
         position: absolute;
-        left: 38%;
-        bottom: -32px;
+        left: 90%;
+        bottom: 98px;
         transform: translate(-50%, 0%);
     }
     .arrow {
@@ -501,7 +507,7 @@ span#sucess2 {
     top: 0px;
     left: 0px;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    /* background: rgba(0, 0, 0, 0.6); */
 }
 /*--Road map section--*/
 .road_map_status {
@@ -1899,7 +1905,7 @@ h2 {
 }
 
 .invision-bg {
-    background: url(../image/our_vision.jpg);
+    background: url(../image/our_vision.png);
     background-repeat: no-repeat;
     width: 100%;
     float: left;
@@ -1907,7 +1913,16 @@ h2 {
     background-size: cover;
     position:relative;
 }
-
+.invision-bg:before{
+    position:absolute;
+    left:0px;
+    top:0px;
+    background: #16121e;
+    width:100%;
+    height:100%;
+    content:" ";
+    z-index: -2;
+} 
 .our-vision-hdng {
     text-align: center;
     color: #fff;
@@ -7137,8 +7152,8 @@ img.blog-section-img-tabs {
     /*banner start*/
     .arrow-wrap {
         position: absolute;
-        left: 44%;
-        bottom: -15px;
+        /* left: 44%;
+        bottom: -15px; */
         transform: translate(-50%, 0%);
     }
 
@@ -7879,7 +7894,7 @@ img.blog-section-img-tabs {
         top: 180px;
     }
     .invision-bg{
-        background: url(../image/tab_vision.jpg);
+        background: url(../image/tab_vision2.png);
         background-repeat: no-repeat;
         background-position: center;
     }
@@ -7979,6 +7994,9 @@ img.blog-section-img-tabs {
 }
 
 @media screen and (max-width: 992px) {
+    .arrow-wrap{
+        left: 86%;
+    }
     /*----latest-Start-banner-section------*/
     /* .banner-logo-div {
         top: 1164px !Important;
@@ -8176,8 +8194,8 @@ img.blog-section-img-tabs {
 
     .arrow-wrap {
         position: absolute;
-        left: 48%;
-        bottom: -3px;
+        /* left: 48%;
+        bottom: -3px; */
         transform: translate(-50%, 0%);
     }
 
@@ -9143,8 +9161,8 @@ img.blog-section-img-tabs {
 
     .arrow-wrap {
         position: absolute;
-        left: 40%;
-        bottom: -43px;
+        /* left: 40%;
+        bottom: -43px; */
         transform: translate(-50%, 0%);
     }
 
@@ -9343,8 +9361,8 @@ img.blog-section-img-tabs {
 @media screen and (max-width: 840px) {
     .arrow-wrap {
         position: absolute;
-        left: 42%;
-        bottom: -25px;
+        /* left: 42%;
+        bottom: -25px; */
         transform: translate(-50%, 0%);
     }
 }
@@ -9380,8 +9398,8 @@ img.blog-section-img-tabs {
 
     .arrow-wrap {
         position: absolute;
-        left: 42%;
-        bottom: -23px;
+        /* left: 42%;
+        bottom: -23px; */
         transform: translate(-50%, 0%);
     }
 
@@ -10153,8 +10171,8 @@ img.blog-section-img-tabs {
     }
     .arrow-wrap {
         position: absolute;
-        left: 38%;
-        bottom: -14px;
+        /* left: 38%;
+        bottom: -14px; */
         transform: translate(-50%, 0%);
     }
     .header-line-shadow img {
@@ -10377,8 +10395,8 @@ img.blog-section-img-tabs {
 
     .arrow-wrap {
         position: absolute;
-        left: 38%;
-        bottom: -14px;
+        /* left: 38%;
+        bottom: -14px; */
         transform: translate(-50%, 0%);
     }
 
@@ -12570,8 +12588,8 @@ img.blog-section-img-tabs {
 
     .arrow-wrap {
         position: absolute;
-        left: 38%;
-        bottom: -32px;
+        /* left: 38%;
+        bottom: -32px; */
         transform: translate(-50%, 0%);
     }
 
@@ -12856,10 +12874,6 @@ img.blog-section-img-tabs {
 
     .banner-WNDR-btn {
         margin-top: 48px;
-    }
-
-    .arrow-wrap {
-        bottom: -15px;
     }
 
     /*banner end*/
@@ -13193,7 +13207,7 @@ img.blog-section-img-tabs {
         text-align: center;
     }
     .invision-bg{
-        background-image: url(../image/mobile_our_vision.jpg) !Important;
+        background-image: url(../image/mobile_our_vision.png) !Important;
         background-size: unset;
         height: 520px;
     }
@@ -13316,9 +13330,7 @@ img.blog-section-img-tabs {
         font-size: 24px;
         margin-bottom: 0;
     }
-    .arrow-wrap {
-        bottom: -30px;
-    }
+    
     div#bdNavbar {
         top: 68px;
     }
