--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
 			  </span>-->
 			  <div class="sbscribe_btn_input">
 				<span>
-					<input type="email" name="myInput1" required  id="myInput1" value="" placeholder="Enter Email">
+					<input type="email" name="myInput1" required  id="myInput1" value="" placeholder="Enter email">
 				</span>
 				</div>
 			  <div class="alert alert-danger success-msg" id="sucess_div1" role="alert" hidden>
@@ -73,13 +73,15 @@
 							subscribe
 						</button>
 					</div>
-					<div class="mbl-arrow">
-						<a class="arrow-wrap" href="#content" style="opacity: 1;">
-						<span class="arrow"></span>
-						<!--<span class="hint">scroll</span>-->
-						</a>
-					</div>
+					
 				</div>
+			</div>
+			<div class="mbl-arrow">
+				<a class="arrow-wrap" href="#content" style="opacity: 1;">
+				<span class="arrow"></span>
+				
+				<!--<span class="hint">scroll</span>-->
+				</a>
 			</div>
 		</div>
 	</div>
