--- a/templates/home.html
+++ b/templates/home.html
@@ -230,7 +230,7 @@
 	<!-- game-play start -->
 	<div class="gamePlayer">
 		<div class="video_overlays"></div>			
-				<video id="myVideo" class="video video_desktop_home" width="100%" height="100%" poster="{% static 'image/game-player.jpg' %}" autoplay muted controls>
+				<video id="myVideo" class="video video_desktop_home" width="100%" height="100%" poster="{% static 'image/game-player.jpg' %}"  autoplay muted  controlslist="nodownload noplaybackrate">  <!-- autoplay muted controls disablepictureinpicture controlslist="nodownload noplaybackrate" -->
 					<source src="https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4" type="video/mp4">
 				</video>
 				<video id="myVideo" class="video video_mbl_home"  controls="controls" width="100%" height="100%" poster="{% static 'image/game-player_mbl.png' %}" autoplay muted controls>
