--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,144 @@
+@keyframes scaleIn {
+    from {
+      transform: scale(.5, .5);
+      opacity: .5;
+    }
+    to {
+      transform: scale(2.5, 2.5);
+      opacity: 0;
+    }
+  }
+  .circle{
+    border-radius: 50%;
+    background-color: rgba(221, 66, 63) !IMPORTANT;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    opacity: 0;
+    animation: scaleIn 4s infinite cubic-bezier(.36, .11, .89, .32);
+    z-index: -14;
+    right: 1px;
+  }
+  .video-vision i{
+    z-index: 99;
+    position: relative;
+  }
+.banner_video_section {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.banner_video_section .video {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-color: #ccc;
+}
+
+.banner_video_section .video-content {
+position: absolute;
+top: 154px;
+right: 20px;
+color: #ffffff;
+position: absolute;
+float: right;
+right: 30px;
+display: flex;
+align-items: center;
+border-radius: 90px;
+padding: 7px 13px;
+cursor: pointer;
+width: 44px;
+height: 44px;
+z-index: 9999;
+}
+.banner_video_section .video-content i{
+color: #ffffff;
+font-size: 21px;
+}
+
+i#audio-control {
+color: #ffffff;
+font-size: 21px;
+}
+.video-home-content {
+color: #ffffff;
+position: relative;
+float: right;
+top: 80px;
+right: 30px;
+font-size: 21px;
+z-index: 9999999;
+border-radius: 90px;
+padding: 7px 13px;
+cursor: pointer;
+width: 44px;
+}
+.video-home-content .circle {
+    top: 2px !IMPORTANT;
+}
+.valume_banner_home{
+    width: 95%;
+    text-align: right;
+    margin: 0 auto;
+    position:relative;
+}
+.valume_banner_home i{
+    font-size: 26px;
+    color:#ffbb00;
+    padding-top: 160px;
+}
+.valume_buttn{
+    width: 95%;
+    text-align: right;
+    margin: 0 auto;
+    padding-top: 30px;
+    position:relative;
+}
+.video-vision {
+    color: #fff;
+    position: absolute;
+    float: right;
+    top: 30px;
+    right: 35px;
+    font-size: 30px;
+    display: flex;
+    font-size: 21px;
+    align-items: center;
+    z-index: 9999999;
+    border-radius: 90px;
+    padding: 7px 13px;
+    cursor: pointer;
+    width: 44px;
+    height: 44px;
+}
+.sound_on {
+    position: absolute;
+    right: 0px;
+}
+.sound_off{
+    position: absolute;
+    right: 12px;
+    /* display: none; */
+}
+.valume_buttn_vision{
+    width: 95%;
+    text-align: right;
+    margin: 0 auto;
+    position:relative;
+    z-index: 999;
+}
+.valume_buttn_vision i{
+    font-size: 26px;
+    color:#ffbb00;
+    padding-top: 20px;
+}
+.valume_buttn i{
+    font-size: 26px;
+    color:#ffbb00;
+} 
 .vision-lineas.vision_top_lineas {
     position: absolute;
     bottom: 40px;
@@ -11394,6 +11535,56 @@ img.blog-section-img-tabs {
 }
 
 @media only screen and (max-width: 768px) {
+    .video-vision{
+        top: 10px;
+        right: 10px;
+        background: rgba(221, 66, 63, 0.5) !IMPORTANT;
+         width: 40px !IMPORTANT;
+         height: 40px !IMPORTANT;
+    }
+    .circle{
+        background-color: rgba(221, 66, 63, 0.5) !IMPORTANT;
+    }
+    .video-content{   
+        background: rgba(221, 66, 63, 0.5) !IMPORTANT;
+         width: 40px !IMPORTANT;
+         height: 40px !IMPORTANT; 
+         right: 20px;  
+    }
+    .video-content i{
+        font-size: 16px !important; 
+    }
+    .video-vision i{
+        font-size: 16px;
+    }
+    .video-home-content{
+        top: 60px;
+        background: rgba(221, 66, 63, 0.5) !IMPORTANT;
+        width: 40px !IMPORTANT;
+        height: 40px !IMPORTANT; 
+        display: flex;
+        align-items: center;
+        right: 15px;
+    }
+    .video-home-content i{
+        font-size: 16px !important; 
+    }
+    .valume_buttn_vision i{
+        font-size: 20px;
+        padding-top: 10px;
+    }
+    .valume_buttn i {
+        font-size: 20px;
+    }
+    .valume_buttn{
+        padding-top: 20px;
+    }
+    .valume_banner_home i {
+        font-size: 20px;
+    }
+    .valume_banner_home i{
+        padding-top: 140px;
+    }
     /*---------Start Video Banner Section----------*/
     /* .banner-logo-div {
         top: 1034px !Important;
