--- a/templates/home.html
+++ b/templates/home.html
@@ -228,18 +228,37 @@
 
 	<!-- game-play start -->
 	<!-- game-play start -->
+	<div class="video-home-content">
+		<i class="fa fa-volume-off" id="audio-home-control" aria-hidden="true"></i>
+		<div class="circle" style="animation-delay: 0s"></div>
+		<div class="circle" style="animation-delay: 1s"></div>
+		<div class="circle" style="animation-delay: 2s"></div>
+		<div class="circle" style="animation-delay: 3s"></div>
+	</div>
 	<div class="gamePlayer">
 		<div class="video_overlays"></div>			
-				<video id="myVideo" class="video video_desktop_home" width="100%" height="100%" poster="{% static 'image/game-player.jpg' %}"  autoplay muted  controlslist="nodownload noplaybackrate">  <!-- autoplay muted controls disablepictureinpicture controlslist="nodownload noplaybackrate" -->
+				<video id="myVideo" class="video video_desktop_home" width="100%" height="100%" preload='auto' poster="{% static 'image/game-player.jpg' %}" autoplay muted controlslist="nodownload noplaybackrate">
 					<source src="https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4" type="video/mp4">
 				</video>
-				<video id="myVideo" class="video video_mbl_home"  controls="controls" width="100%" height="100%" poster="{% static 'image/game-player_mbl.png' %}" autoplay muted controls>
+				<video id="myVideo2" class="video video_mbl_home" width="100%" height="100%" preload='auto' poster="{% static 'image/game-player_mbl.png' %}" autoplay muted controlslist="nodownload noplaybackrate">
 					<source src="https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4" type="video/mp4">
 				</video>	
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
+				
 				<div class="gamePlayer-outer">
+					<!-- <div class="valume_buttn">
+						<div class="sound_on">
+							<i class="fa fa-volume-off" aria-hidden="true"></i>
+						</div>
+						<div class="sound_off">
+							<i class="fa fa-volume-up" aria-hidden="true"></i>
+						</div>	
+					</div> -->
+
+					
+					 
 					<div class="gamePlayer-logo-item">
 						<img src="{% static 'image/gamePlayer-logo.png' %}" class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true" alt="gamePlayer-logo-1">
 						<div class="gamePlayer-contect">
