--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
 
 			<video class="banner_desktop_video" id="video2" width="100%" height="100%" preload='none'
 				poster="{% static 'image/banner_img.jpg' %}" autoplay muted loop playsinline onclick="return false">
-				<source src="{% static 'video/PC_version_3mbps.mp4' %}" type="video/mp4">
+				<source src="{% static 'video/PC_version_10mbps_VP8.webm' %}" type="video/mp4">
 			</video>
 			<video class="banner_mobile_video" id="video21" width="100%" height="100%" preload='none'
 				poster="{% static 'image/banner_img.jpg' %}" autoplay muted loop playsinline onclick="return false">
