--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,9 @@
+.borris_bazelais {
+    text-align: right;
+    font-weight: 600;
+    color: #f3012d !important;
+    font-size: 26px !IMPORTANT;
+}
 /*---8-sep-2022---*/
 .banner-WNDR-outer{
     width: 80%;
@@ -11543,12 +11549,15 @@ img.blog-section-img-tabs {
 }
 
 @media only screen and (max-width: 768px) {
+    .borris_bazelais{
+        font-size: 20px !IMPORTANT;
+    }
     .video-vision{
         top: 10px;
         right: 10px;
         background: rgba(221, 66, 63, 0.5) !IMPORTANT;
-         width: 40px !IMPORTANT;
-         height: 40px !IMPORTANT;
+        width: 40px !IMPORTANT;
+        height: 40px !IMPORTANT;
     }
     .circle{
         background-color: rgba(221, 66, 63, 0.5) !IMPORTANT;
@@ -11608,12 +11617,14 @@ img.blog-section-img-tabs {
     }
     .video_mbl_home{
     display:block;
+    height: 450px;
     }
     .video_desktop_home{
     display: none;
     }
     .mbl_cover_bnr{
     display:block !important ;
+    height: 450px;
     }
     .desktop_cover_bnr{
     display: none;
@@ -13345,6 +13356,9 @@ img.blog-section-img-tabs {
     }  
 }
 @media only screen and (max-width: 575px) {
+    .borris_bazelais {
+        font-size: 18px !IMPORTANT;
+    }
     /*---8-sep-2022---*/
     .banner-WNDR-outer{
         width: 70%;
