--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,4 @@
+
 {%extends 'base.html'%}
 {% load static %}
 {% block title %}Wndr.Land{% endblock %}
@@ -236,12 +237,11 @@
 		<div class="circle" style="animation-delay: 2s"></div>
 		<div class="circle" style="animation-delay: 3s"></div>
 	</div>
-	<div class="gamePlayer">
-		<div class="video_overlays"></div>			
-				<video id="myVideo" class="video video_desktop_home" width="100%" height="100%" preload='auto' poster="{% static 'image/game-player.jpg' %}" controlslist="nodownload noplaybackrate">
+	<div class="gamePlayer">			
+				<video id="myVideo" class="video video_desktop_home" width="100%" height="100%" preload='auto' poster="{% static 'image/game-player.jpg' %}"controlslist="nodownload noplaybackrate">
 					<source src="https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4" type="video/mp4">
 				</video>
-				<video id="myVideo2" class="video video_mbl_home" width="100%" height: "400px" preload='auto' poster="{% static 'image/game-player_mbl.png' %}" controlslist="nodownload noplaybackrate" style="object-fit:cover;background-position: bottom center;">
+				<video id="myVideo2" class="video video_mbl_home" width="100%" height="100%" preload='auto' poster="{% static 'image/game-player_mbl.png' %}" controlslist="nodownload noplaybackrate" webkit-playsinline="true" playsinline="true" style="object-fit:cover;background-position: bottom center;">
 					<source src="https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4" type="video/mp4">
 				</video>	
 	<div class="container">
