--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 {% load static %}
 <html>
@@ -367,7 +368,7 @@
 					
 						<video id="myVideo12" class="video1" width="100%" height="100%" preload='auto'
 							poster="{% static 'image/slide-15-STREAM.jpg' %}" autoplay muted
-							controlslist="nodownload noplaybackrate">
+							controlslist="nodownload noplaybackrate" webkit-playsinline="true" playsinline="true">
 							<source src="{% static 'video/wndr_Tech demo (1080p).mp4' %}" type="video/mp4">
 						</video>
 						<img class="vision_poster_bnr" id="vision_poster_bnr_img"
@@ -618,7 +619,7 @@
 						reinvent the very notion of what it means to experience the Internet. Once we cross over into
 						this new world of WNDR, there truly may be no going back.
 					</p>
-					</p>
+					<p class="borris_bazelais">By : Borris Bazelais</p>
 				</div>
 			</div>
 		</div>
