--- a/templates/home.html
+++ b/templates/home.html
@@ -228,6 +228,7 @@
 	</div>
 	<!-- WNDRLAND-WNDR-end -->
 
+
 	<!-- game-play start -->
 	<!-- game-play start -->
 	<div class="video-home-content">
@@ -241,7 +242,7 @@
 				<video id="myVideo" class="video video_desktop_home" width="100%" height="100%" preload='auto' poster="{% static 'image/game-player.jpg' %}"controlslist="nodownload noplaybackrate">
 					<source src="https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4" type="video/mp4">
 				</video>
-				<video id="myVideo2" class="video video_mbl_home" width="100%" height="100%" preload='auto' poster="{% static 'image/game-player_mbl.png' %}" controlslist="nodownload noplaybackrate" webkit-playsinline="true" playsinline="true" style="object-fit:cover;background-position: bottom center;">
+				<video id="myVideo2" class="video video_mbl_home" width="100%" height="100%" preload='auto' poster="{% static 'image/game-player_mbl.png' %}" controlslist="nodownload noplaybackrate" style="object-fit:cover;background-position: bottom center;" webkit-playsinline="true" playsinline="true">
 					<source src="https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4" type="video/mp4">
 				</video>	
 	<div class="container">
