--- a/templates/home.html
+++ b/templates/home.html
@@ -288,9 +288,9 @@
 							</div>
 						</div>
 						<div class="game-contact uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">
-							<!-- <div class="playpause">
-								<p>TRAILER</p>
-							</div> -->
+							 <div class="playpause">
+							<p>GAMEPLAY TRAILER</p>
+							</div>
 						</div>
 					</div>
 				</div>
